# Procedural-Notes

./: .gitignore  .gitmodules  rust_keywords.md
Algebra/: Makefile  main.c  type_numbers.h  vectors_matrix.h
Assembly/: Makefile  callC-lib.nasm  hello.lst  hello.nasm  hello2.lst  hello2.nasm  hello_world.s  move.nasm  std_macros.nasm  template.nasm  usr_input.nasm  usr_input.txt
Assembly/ARM/: .dockerignore  Dockerfile  Justfile  hello_world.arm  main.c
Assembly/ARM/src/: fibonacci.arm  fibonacci.c  hello_world.arm
Assembly/NASM/: template.nasm
Assembly/Theory/: Makefile  multitable.tex  run_rings.md  sys_calls.md  syscalls.aux  syscalls.csv  syscalls.md  syscalls.tex
Assembly/Theory/_minted-syscalls/: 0392DA322189B70B9D42BE684CECFAB361603D1FF6AF0D7DB94A3B60B127E8F4.pygtex  0A41F33068545833844E043C766B6C5561603D1FF6AF0D7DB94A3B60B127E8F4.pygtex  0BD0BE45573AE86028178A851E37FF0661603D1FF6AF0D7DB94A3B60B127E8F4.pygtex  0DFA627125202D789BF25BA1545503F761603D1FF6AF0D7DB94A3B60B127E8F4.pygtex  0E34062FDF9AA3E818B5AF09BCE38B3361603D1FF6AF0D7DB94A3B60B127E8F4.pygtex  0EAE7767950D2219E4579D8A8D6F5E2961603D1FF6AF0D7DB94A3B60B127E8F4.pygtex  140EB389254C506966CFD1BCEFE28B6161603D1FF6AF0D7DB94A3B60B127E8F4.pygtex  1466F22805F828D24CF3D85598D15ED361603D1FF6AF0D7DB94A3B60B127E8F4.pygtex  1C680A965FA305A52E1EDBC35B71670261603D1FF6AF0D7DB94A3B60B127E8F4.pygtex  1D60A81F69943F12A0FCCAC0F3BEC83F61603D1FF6AF0D7DB94A3B60B127E8F4.pygtex  22CF1C3E72ECD6D1E0D8CE9B269738BC61603D1FF6AF0D7DB94A3B60B127E8F4.pygtex  25F17A2E19FF9FC4758BDB848BAEA08761603D1FF6AF0D7DB94A3B60B127E8F4.pygtex  326DCC88BD94FC685470C24F5345E0AF61603D1FF6AF0D7DB94A3B60B127E8F4.pygtex  3420F92606CAB6C64394371417BA1D4E61603D1FF6AF0D7DB94A3B60B127E8F4.pygtex  365C94BDE68DDEB9BA71879D811B2CDD61603D1FF6AF0D7DB94A3B60B127E8F4.pygtex  394D3240A9DE1730F30506170631CB4261603D1FF6AF0D7DB94A3B60B127E8F4.pygtex  39A0D9DF17B8EAAA3AD8745F917538C761603D1FF6AF0D7DB94A3B60B127E8F4.pygtex  39E79E0244FD32640B66871AE20F5DBF61603D1FF6AF0D7DB94A3B60B127E8F4.pygtex  3B685E1CFAE3B996C60168837E1D403561603D1FF6AF0D7DB94A3B60B127E8F4.pygtex  3D72FA2757236F189720A104A116249C61603D1FF6AF0D7DB94A3B60B127E8F4.pygtex  4166783E01C2E5983DA48A303AEA14D561603D1FF6AF0D7DB94A3B60B127E8F4.pygtex  450B6446D3232490F8463916FF1AEFA961603D1FF6AF0D7DB94A3B60B127E8F4.pygtex  4536A917C69224150C61D26D7B54201761603D1FF6AF0D7DB94A3B60B127E8F4.pygtex  4E05A5F52B3C1444626BBC82A72F76C461603D1FF6AF0D7DB94A3B60B127E8F4.pygtex  52713346322421F37157AF92E0BAD85761603D1FF6AF0D7DB94A3B60B127E8F4.pygtex  5991713A3E84A2440F3E66D82C83C12C61603D1FF6AF0D7DB94A3B60B127E8F4.pygtex  5AC1FD541744A7BB60295BF5365A3B4D61603D1FF6AF0D7DB94A3B60B127E8F4.pygtex  619057AB248A967078DA32F4F73F33CE61603D1FF6AF0D7DB94A3B60B127E8F4.pygtex  69AF5F35071AB260C28747CDB9E264F061603D1FF6AF0D7DB94A3B60B127E8F4.pygtex  6B4E6E3C6A6397282014CBAC46008A8C61603D1FF6AF0D7DB94A3B60B127E8F4.pygtex  6D856ACDD097581CF176A978DF4787AB61603D1FF6AF0D7DB94A3B60B127E8F4.pygtex  703792357AF683BCA57F43628B767FE161603D1FF6AF0D7DB94A3B60B127E8F4.pygtex  (+33 more)
Assembly/WASM/: AddInt.wat
BareMetal/rs_helloworld/: Cargo.toml
Clang/: Makefile  README.md
Clang/Concurrency/: Makefile  basic.c
Clang/Data-Struct/: Makefile  data_structures.c  hash_main.c  hash_structures.c  hash_structures.h  main.c  option.c
Clang/IOactions/: Makefile
Clang/Macros/: Makefile  macros-prep.c
Clang/data_structures/: Makefile  README.md
Clang/projects_c/: README.md
Clang/punteros/: Makefile
Clang/sorting/: Makefile
Cpp-20/basic_layout/: .gitignore  CMakeLists.txt  Justfile  README.md  compile_commands.json  justfile
Cpp-20/basic_layout/.cache/clangd/index/: cli.hpp.9A012B23136FF9FA.idx  color.h.5D850ED5186368B9.idx  core.h.4BE34129746EE1A8.idx  cxxopts.hpp.0765F83ED4B7A720.idx  format-inl.h.8D0011602A85940C.idx  format.cc.0686E9E5B12BF0EC.idx  format.h.8CA23EB6E8B0CA96.idx  lib.hpp.AF29086E7B87635D.idx  main.cpp.8D80B00C35CAB245.idx  os.cc.7DB24F3DFFAAA95E.idx  os.h.9048B4FB40807C25.idx  utils.cppm.41B8BBE8C0804B73.idx  utils.hpp.40DD9DF86B22583A.idx
Cpp-20/basic_layout/src/: cli.cpp  cli.hpp  lib.cpp  lib.hpp  main.cpp  utils.cpp  utils.hpp
Cpp-20/dep_rp3d/: CMakeLists.txt  Doxygen  Justfile
Cpp-20/dep_rp3d/data/: output.txt
Cpp-20/dep_rp3d/src/: lib.hpp  test.cpp  utils.cpp
Cpp-20/physics_engine/: CMakeLists.txt  Justfile  script.sh
Cpp-20/physics_engine/data/: output.json
Cpp-20/physics_engine/include/: cli.hpp  utils.hpp
Cpp-20/physics_engine/src/: cli.cpp  main.cpp  utils.cpp
Cpp-20/physics_engine/tests/: test.cpp
Data-Struct/: Makefile  Matrix.c  basic_algorithms.c  basic_algorithms.h  data_structures.c  data_structures.h  forward_linked_list.cpp  linked_list1.c  lists_header.c  main.c  matrix_algebra.c  safe_io.c
Data-Struct/Clang/: basic_algorithms.c  basic_algorithms.h  data_structures.h
Data-Struct/Rust/: main.rs
Data-Struct/Rust/toomany_linkedlists/: Cargo.toml
Data-Struct/Rust/toomany_linkedlists/src/: first.rs  main.rs  second.rs
Extras/: anscii-colors.c  colors.c
IOactions/Clang/: main.c  sample.txt
Julia/FunnyAlgos/: Project.toml
Macros/: macros.c
MultiComputing/Python/: async_hello.py
MultiComputing/Theory/: Glosary.md  concurrency.md
Others/: Makefile  gotoFor.c  main.c
Python/Algorithms/: erastostenes.py
Python/MultiProcess/: thread_bots.py
Python/OOP/: creating_obj.py  fibonacci.py  modules_hacks.py  scopeness.py
Python/Sorting/: pytype.cfg  quick_sort-doublelink.py  quick_sort-simple.py  quick_sort_simple.py
Rust/: REFERENCES.md  rust_smartptr.md  rust_stdlib.md
Rust/algorithms/: Cargo.toml
Rust/from_py2rust/montecarlo_pymod/rust_lib/: Cargo.toml
Rust/from_py2rust/montecarlo_pymod/rust_lib/examples/: pi.rs
Rust/from_py2rust/montecarlo_pymod/rust_lib/src/: lib.rs
Rust/my_examples/: Cargo.toml
Rust/reference/: Cargo.toml
Theory/: about_datastructures.md  c_types.md  multiprocess.md  pointers.md  register_names.md  run_rings.md  rust_ownership.md  rust_tips.md
Verilog/: Dockerfile  Justfile  caesar.v  deps.sh  fa.v  jk_ff.v  snd_tick.v
(+50 files in other folders)
